fix: prevent nav from squishing
refs: 07flex

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -34,6 +34,8 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  /* prevent nav from squishing */
+  flex: none;
 }
 
 .card {
